--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -502,7 +502,7 @@ ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNR_TARGET} ${PSNRHVS_TARGET} \
  ${PIM_TARGET} ${IIM_TARGET} ${IIX_TARGET} ${GEN_CDF_TARGET} \
  ${GEN_LAPLACE_TABLES_TARGET} ${IS_TARGET} ${IP_TARGET} ${IT_TARGET} \
  ${T_TARGET} ${TG_TARGET} ${T2D_TARGET} ${BSIZE_TARGET} ${BD_TARGET} \
- ${CS_TARGET} ${YJ_TARGET} ${JY_TARGET}
+ ${YJ_TARGET} ${JY_TARGET}
 
 all: ${ALL_TARGETS}
 
