Do not build cfl_stats by default.

--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -492,7 +492,7 @@ JY_TARGET:=jpegyuv
 
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNR_OBJS} ${PSNRHVS_OBJS} ${PIM_OBJS} ${IIM_OBJS} ${IIX_OBJS} \
  ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${IS_OBJS} ${IP_OBJS} ${IT_OBJS} ${T_OBJS} \
- ${TG_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} ${BD_OBJS} ${CS_OBJS} ${YJ_OBJS} ${JY_OBJS}
+ ${TG_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} ${BD_OBJS} ${YJ_OBJS} ${JY_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
