Address JM's nits in issue 172 patchset 2

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,6 +70,7 @@ src_libdaalabase_la_SOURCES = \
 	src/newdct.c \
 	src/partition.c \
 	src/pvq.c \
+	src/pvq_code.c \
 	src/pvq_decoder.c \
 	src/pvq_encoder.c \
 	src/state.c \
