--- a/unix/Makefile
+++ b/unix/Makefile
@@ -35,6 +35,7 @@ DUMP_VIDEO_TARGET = dump_video
 ENCODER_EXAMPLE_TARGET = encoder_example
 PLAYER_EXAMPLE_TARGET = player_example
 # Test targets
+DCTTEST_TARGET = dcttest
 ECTEST_TARGET = ectest
 TEST_CHECK_INITIAL_TARGET = check_initial
 TEST_COEF_CODER_TARGET = test_coef_coder
@@ -93,6 +94,7 @@ endif
 
 CHECK_LIBS := -pthread $(shell pkg-config check --libs)
 
+DCTTEST_LIBS = -lm
 ECTEST_LIBS = -lm
 TEST_COEF_CODER_LIBS =
 TEST_HEADER_LIBS = ${CHECK_LIBS}
@@ -201,6 +203,12 @@ DUMP_VIDEO_CSOURCES = dump_video.c
 ENCODER_EXAMPLE_CSOURCES = encoder_example.c
 PLAYER_EXAMPLE_CSOURCES = player_example.c
 
+DCTTEST_CSOURCES = \
+dct.c \
+filter.c \
+$(if $(findstring -DOD_ENABLE_ASSERTIONS,${CFLAGS}), \
+internal.c \
+)
 ECTEST_CSOURCES = tests/ectest.c
 TEST_COEF_CODER_CSOURCES = \
 tests/test_coef_coder.c \
@@ -251,13 +259,14 @@ LIBDAALAENC_CHEADERS:= ${LIBDAALAENC_CHEADERS:%=${LIBSRCDIR}/%}
 DUMP_VIDEO_CSOURCES:= ${DUMP_VIDEO_CSOURCES:%=${BINSRCDIR}/%}
 ENCODER_EXAMPLE_CSOURCES:= ${ENCODER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
 PLAYER_EXAMPLE_CSOURCES:= ${PLAYER_EXAMPLE_CSOURCES:%=${BINSRCDIR}/%}
+DCTTEST_CSOURCES:= ${DCTTEST_CSOURCES:%=${LIBSRCDIR}/%}
 ECTEST_CSOURCES:= ${ECTEST_CSOURCES:%=${TESTSRCDIR}/%}
 TEST_CHECK_INITIAL_CSOURCES:= ${TEST_CHECK_INITIAL_CSOURCES:%=${TESTSRCDIR}/%}
 TEST_COEF_CODER_CSOURCES:= ${TEST_COEF_CODER_CSOURCES:%=${TESTSRCDIR}/%}
 ALL_CSOURCES:= ${LIBDAALABASE_CSOURCES} ${LIBDAALADEC_CSOURCES} \
  ${LIBDAALAENC_CSOURCES} ${DUMP_VIDEO_CSOURCES} ${ENCODER_EXAMPLE_CSOURCES} \
- ${PLAYER_EXAMPLE_CSOURCES} ${ECTEST_CSOURCES} ${TEST_COEF_CODER_CSOURCES} \
- ${TEST_CHECK_INITIAL_CSOURCES}
+ ${PLAYER_EXAMPLE_CSOURCES} ${DCTTEST_CSOURCES} ${ECTEST_CSOURCES} \
+ ${TEST_COEF_CODER_CSOURCES} ${TEST_CHECK_INITIAL_CSOURCES}
 # Prepand target path to file names.
 LIBDAALABASE_TARGET:= ${TARGETLIBDIR}/${LIBDAALABASE_TARGET}
 LIBDAALADEC_TARGET:= ${TARGETLIBDIR}/${LIBDAALADEC_TARGET}
@@ -266,6 +275,7 @@ DUMP_VIDEO_TARGET:= ${TARGETBINDIR}/${DUMP_VIDEO_TARGET}
 ENCODER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${ENCODER_EXAMPLE_TARGET}
 PLAYER_EXAMPLE_TARGET:= ${TARGETBINDIR}/${PLAYER_EXAMPLE_TARGET}
 # Prepend test path to file names.
+DCTTEST_TARGET:= ${TESTBINDIR}/${DCTTEST_TARGET}
 ECTEST_TARGET:= ${TESTBINDIR}/${ECTEST_TARGET}
 TEST_CHECK_INITIAL_TARGET:= ${TESTBINDIR}/${TEST_CHECK_INITIAL_TARGET}
 TEST_COEF_CODER_TARGET:= ${TESTBINDIR}/${TEST_COEF_CODER_TARGET}
@@ -277,9 +287,9 @@ TEST_FILTERS_TARGET:=${TESTBINDIR}/${TEST_FILTERS_TARGET}
 # Complete set of targets
 ALL_TARGETS:= ${LIBDAALABASE_TARGET} ${LIBDAALADEC_TARGET} \
  ${LIBDAALAENC_TARGET} ${DUMP_VIDEO_TARGET} ${ENCODER_EXAMPLE_TARGET} \
- ${PLAYER_EXAMPLE_TARGET} ${ECTEST_TARGET} ${TEST_COEF_CODER_TARGET} \
- ${TEST_HEADER_TARGET} ${TEST_LOGGING_TARGET} ${TEST_CHECK_INITIAL_TARGET} \
- ${TEST_DIVU_SMALL_TARGET} ${TEST_FILTERS_TARGET}
+ ${PLAYER_EXAMPLE_TARGET} ${DCTTEST_TARGET} ${ECTEST_TARGET} \
+ ${TEST_COEF_CODER_TARGET} ${TEST_HEADER_TARGET} ${TEST_LOGGING_TARGET} \
+ ${TEST_CHECK_INITIAL_TARGET} ${TEST_DIVU_SMALL_TARGET} ${TEST_FILTERS_TARGET}
 
 # Targets:
 # Everything (default)
@@ -326,6 +336,12 @@ ${TEST_CHECK_INITIAL_TARGET}: ${TEST_CHECK_INITIAL_OBJS}
 	mkdir -p ${TESTBINDIR}
 	${CC} ${CFLAGS} ${TEST_CHECK_INITIAL_OBJS} ${TEST_CHECK_INITIAL_LIBS} -o $@
 
+# dcttest
+${DCTTEST_TARGET}: ${DCTTEST_CSOURCES}
+	mkdir -p ${TESTBINDIR}
+	${CC} ${CFLAGS} -DOD_DCT_CHECK_OVERFLOW -DOD_DCT_TEST ${DCTTEST_CSOURCES} \
+         ${DCTTEST_LIBS} -o $@
+
 # ectest
 ${ECTEST_TARGET}: ${ECTEST_OBJS}
 	mkdir -p ${TESTBINDIR}
@@ -369,6 +385,7 @@ asm: ${ALL_ASM}
 
 # check that build is complete
 check: all
+	${DCTTEST_TARGET}
 	${ECTEST_TARGET}
 	${TEST_CHECK_INITIAL_TARGET}
 	${TEST_COEF_CODER_TARGET}
