configure: use AC_CONFIG_AUX_DIR
Copied/generated files will be stored in the build-aux directory

--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@ m4_define([CURRENT_VERSION],
 AC_INIT([daala],[CURRENT_VERSION],[daala@xiph.org])
 AC_CONFIG_SRCDIR([src/decode.c])
 AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_AUX_DIR([build-aux])
 
 AC_USE_SYSTEM_EXTENSIONS
 AC_SYS_LARGEFILE
