Parallelize vq_train and some minor restructuring.
This uses openmp to do a quick parallel implementation of the VQ
 training inner-loop.

It can be flipped to uni-processor with a simple flag in the source
 for cases where multiple trainings will be run in parallel, since
 thats somewhat more efficient than the multithreaded version here.

r=jm

--- a/Makefile.am
+++ b/Makefile.am
@@ -493,7 +493,7 @@ tools_yuv2yuv4mpeg_LDADD =
 # vq_train
 tools_vq_train_SOURCES = \
 	tools/vq_train.c
-tools_vq_train_CFLAGS =
+tools_vq_train_CFLAGS = -fopenmp
 tools_vq_train_LDADD = $(LIBM)
 
 
